[project]
name = "lgbmranker-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.6.17",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "metaflow>=2.15.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]
